Fixed mistyped project name

--- a/plugins/org.eclipse.viatra2.emf.runtime/.project
+++ b/plugins/org.eclipse.viatra2.emf.runtime/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.ecipse.viatra2.emf.runtime</name>
+	<name>org.eclipse.viatra2.emf.runtime</name>
 	<comment></comment>
 	<projects>
 	</projects>
