[412507] Updated registration of model connectors

--- a/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
@@ -175,6 +175,9 @@
             <instanceof
                   value="org.eclipse.ui.IEditorPart">
             </instanceof>
+            <adapt
+                  type="org.eclipse.incquery.runtime.api.IModelConnector">
+            </adapt>
          </with>
       </definition>
       <definition
