--- a/plugins/org.eclipse.incquery.querybasedfeatures.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.querybasedfeatures.runtime/plugin.xml
@@ -43,10 +43,12 @@
                type="boolean">
          </annotationparameter>
       </annotation>
-      <annotation
-            deprecated="true"
-            description="Please use @QueryBasedFeature instead."
-            name="DerivedFeature">
-      </annotation>
+   </extension>
+   <extension
+         point="org.eclipse.emf.ecore.setting_delegate">
+      <factory
+            class="org.eclipse.incquery.querybasedfeatures.runtime.QueryBasedFeatureSettingDelegateFactory"
+            uri="org.eclipse.incquery.querybasedfeature">
+      </factory>
    </extension>
 </plugin>
