work towards helping out with http://www.eclipse.org/forums/index.php/m/1075365/

--- a/headless/headlessQueries.incquery/build.properties
+++ b/headless/headlessQueries.incquery/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               queries/
+               queries/,\
+               src/
 source.. = src/,\
            src-gen/
 output.. = bin/
