--- a/releng/org.eclipse.viatra2.emf.parent/pom.xml
+++ b/releng/org.eclipse.viatra2.emf.parent/pom.xml
@@ -12,14 +12,15 @@
 	<modules>
 		<module>../../plugins/org.eclipse.viatra2.emf.runtime</module>
 		<module>../../features/org.eclipse.viatra2.emf.runtime.feature</module>
+		<module>../../releng/org.eclipse.viatra2.emf.target</module>
 		<module>../../releng/org.eclipse.viatra2.emf.update</module>
 	</modules>
 	<properties>
-		<tycho.version>0.18.0</tycho.version>
-		<tycho.extras.version>0.18.0</tycho.extras.version>
+		<tycho.version>0.18.1</tycho.version>
+		<tycho.extras.version>0.18.1</tycho.extras.version>
 		<tycho.groupId>org.eclipse.tycho</tycho.groupId>
-		<tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/incquery/org.eclipse.incquery.git</tycho.scmUrl>
-		<eclipse.bugzillaUrl>https://bugs.eclipse.org/bugs/buglist.cgi?product=Incquery</eclipse.bugzillaUrl>
+		<tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/viatra2/org.eclipse.viatra2.emf.git</tycho.scmUrl>
+		<eclipse.bugzillaUrl>https://bugs.eclipse.org/bugs/enter_bug.cgi?product=gmt&amp;component=VIATRA2</eclipse.bugzillaUrl>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<jacoco.version>0.6.3.201306030806</jacoco.version>
@@ -47,10 +48,10 @@
 					<resolver>p2</resolver>
 					<target>
 						<artifact>
-							<groupId>org.eclipse.incquery</groupId>
-							<artifactId>org.eclipse.incquery.update</artifactId>
+							<groupId>org.eclipse.viatra2</groupId>
+							<artifactId>org.eclipse.viatra2.emf.target</artifactId>
 							<version>0.7.0-SNAPSHOT</version>
-							<classifier>emfpattern</classifier>
+							<classifier>viatra2.emf</classifier>
 						</artifact>
 					</target>
 					<ignoreTychoRepositories>true</ignoreTychoRepositories>
