--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -209,7 +209,7 @@
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.sonar</groupId>
-					<artifactId>sonar-maven3-plugin</artifactId>
+					<artifactId>sonar-maven-plugin</artifactId>
 					<version>${sonar.version}</version>
 				</plugin>
 				<plugin>
