fixed EVM examples after refactor

--- a/papyrus-uml/org.eclipse.incquery.examples.uml.evm/plugin.xml
+++ b/papyrus-uml/org.eclipse.incquery.examples.uml.evm/plugin.xml
@@ -89,5 +89,13 @@
             id="org.eclipse.incquery.examples.uml.evm.queries.nonEmptyClass">
       </matcher>
    </extension>
+   <extension
+         id="org.eclipse.incquery.examples.uml.evm.queries.test"
+         point="org.eclipse.incquery.runtime.queryspecification">
+      <matcher
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.evm.queries.util.TestQuerySpecification$Provider"
+            id="org.eclipse.incquery.examples.uml.evm.queries.test">
+      </matcher>
+   </extension>
 
 </plugin>
