--- a/releng/org.eclipse.incquery.update/pom.xml
+++ b/releng/org.eclipse.incquery.update/pom.xml
@@ -11,10 +11,6 @@
 	</parent>
 	<artifactId>org.eclipse.incquery.update</artifactId>
 	<packaging>eclipse-repository</packaging>
-	<properties>
-		<signer-version>1.0.5</signer-version>
-		<signer-input-directory>/home/data/httpd/download-staging.priv/incquery</signer-input-directory>
-	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -92,82 +88,32 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>sign</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<file>
-					<exists>signrepository</exists>
-				</file>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.dash.maven</groupId>
-						<artifactId>eclipse-signing-maven-plugin</artifactId>
-						<version>${signer-version}</version>
-						<executions>
-							<execution>
-								<id>pack</id>
-								<configuration>
-									<inputFile>${project.build.directory}/org.eclipse.incquery.update-${project.version}.zip</inputFile>
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>pack</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>sign</id>
-								<configuration>
-									<inputFile>${project.build.directory}/org.eclipse.incquery.update-${project.version}.zip</inputFile>
-									<signerInputDirectory>${signer-input-directory}</signerInputDirectory>
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>repack</id>
-								<configuration>
-									<inputFile>${project.build.directory}/signed/site_assembly.zip</inputFile>
-								</configuration>
-								<phase>package</phase>
-								<goals>
-									<goal>pack</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>fixCheckSums</id>
-								<phase>package</phase>
-								<goals>
-									<goal>fixCheckSums</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>unzipping</id>
-								<phase>package</phase>
-								<configuration>
-									<tasks>
-										<unzip src="${project.build.directory}/signed/site_assembly.zip" dest="${project.build.directory}/repository" />
-									</tasks>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+	<profile>
+		<id>sign</id>
+		<activation>
+			<activeByDefault>false</activeByDefault>
+			<file>
+				<exists>signrepository</exists>
+			</file>
+		</activation>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.cbi.maven.plugins</groupId>
+					<artifactId>eclipse-jarsigner-plugin</artifactId>
+					<version>1.0.4</version>
+					<executions>
+						<execution>
+							<id>sign</id>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+							<phase>verify</phase>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
 	</profiles>
 </project>
