--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -257,12 +257,41 @@
 	</issueManagement>
 	<profiles>
 		<profile>
-			<id>sign</id>
+			<id>sign_milestone</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
-				<file>
-					<exists>signrepository</exists>
-				</file>
+				<property>
+					<name>BUILD_TYPE</name>
+					<value>milestone</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.cbi.maven.plugins</groupId>
+						<artifactId>eclipse-jarsigner-plugin</artifactId>
+						<version>1.0.4</version>
+						<executions>
+							<execution>
+								<id>sign</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<phase>verify</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sign_release</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<property>
+					<name>BUILD_TYPE</name>
+					<value>release</value>
+				</property>
 			</activation>
 			<build>
 				<plugins>
