--- a/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
@@ -8,24 +8,36 @@
             allPopups="false"
             locationURI="popup:org.eclipse.incquery.tooling.ui.queryexplorer.QueryExplorer.treeViewerMenu">
          <command
-               commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers"
-               label="(Re)initialize IncQuery Viewers"
+               commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers.resourceset"
+               label="Reinitialize IncQuery Viewers"
+               style="push">
+         </command>
+         <command
+               commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers.resource"
+               label="Reinitialize IncQuery Viewers (resource scope)"
                style="push">
          </command>
       </menuContribution>
    </extension>
+   
    <extension
          point="org.eclipse.ui.commands">
       <command
             categoryId="org.eclipse.incquery.viewers.tooling.ui.category"
-            id="org.eclipse.incquery.viewers.tooling.ui.initViewers"
-            name="(Re)initialize IncQuery Viewers">
+            id="org.eclipse.incquery.viewers.tooling.ui.initViewers.resourceset"
+            name="Reinitialize IncQuery Viewers (resourceset)">
+      </command>
+      <command
+            categoryId="org.eclipse.incquery.viewers.tooling.ui.category"
+            id="org.eclipse.incquery.viewers.tooling.ui.initViewers.resource"
+            name="Reinitialize IncQuery Viewers (resource)">
       </command>
       <category
             id="org.eclipse.incquery.viewers.tooling.ui.category"
             name="IncQuery Viewers">
       </category>
    </extension>
+   
    <extension
          point="org.eclipse.ui.views">
       <view
@@ -40,8 +52,8 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.eclipse.incquery.viewers.tooling.ui.handlers.InitializeViewersHandler"
-            commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers">
+            class="org.eclipse.incquery.viewers.tooling.ui.handlers.InitializeViewersHandlerResource"
+            commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers.resource">
          <enabledWhen>
             <with
                   variable="selection">
@@ -61,6 +73,29 @@
             </with>
          </enabledWhen>
       </handler>
+      <handler
+            class="org.eclipse.incquery.viewers.tooling.ui.handlers.InitializeViewersHandlerResourceSet"
+            commandId="org.eclipse.incquery.viewers.tooling.ui.initViewers.resourceset">
+         <enabledWhen>
+            <with
+                  variable="selection">
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <or>
+                     <instanceof
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcher">
+                     </instanceof>
+                     <instanceof
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcherRoot">
+                     </instanceof>
+                  </or>
+               </iterate>
+            </with>
+         </enabledWhen>
+      </handler>
+      
    </extension>
    <extension
          point="org.eclipse.incquery.viewers.tooling.ui.viewersandboxtab">
