--- a/plugins/org.eclipse.incquery.xcore.modeleditor/plugin.xml
+++ b/plugins/org.eclipse.incquery.xcore.modeleditor/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.editors">
       <editor
-            class="org.eclipse.incquery.xcore.editor.CustomizedEcoreEditor"
+            class="org.eclipse.incquery.xcore.editor.XcoreEiqEditorExtensionFactory:org.eclipse.incquery.xcore.editor.CustomizedEcoreEditor"
             contributorClass="org.eclipse.emf.ecore.presentation.EcoreActionBarContributor"
             default="false"
             extensions="xmi"
