large refactoring of Viewers Tooling  - add multi sandbox view  - add settings tab to sandbox view

--- a/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
@@ -40,11 +40,22 @@
    
    <extension
          point="org.eclipse.ui.views">
+      <!--
       <view
             category="org.eclipse.incquery.tooling.ui"
-            class="org.eclipse.incquery.viewers.tooling.ui.views.ViewerSandboxView"
+            class="org.eclipse.incquery.viewers.tooling.ui.views.ViewersSandboxView"
             icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo2.png"
             id="org.eclipse.incquery.viewers.tooling.ui.sandbox"
+            name="IncQuery Viewers Sandbox"
+            restorable="true">
+      </view>
+      -->
+      
+      <view
+            category="org.eclipse.incquery.tooling.ui"
+            class="org.eclipse.incquery.viewers.tooling.ui.views.ViewersMultiSandboxView"
+            icon="platform:/plugin/org.eclipse.incquery.tooling.ui/icons/logo2.png"
+            id="org.eclipse.incquery.viewers.tooling.ui.multisandbox"
             name="IncQuery Viewers Sandbox"
             restorable="true">
       </view>
