--- a/plugins/org.eclipse.incquery.xcore/pom.xml
+++ b/plugins/org.eclipse.incquery.xcore/pom.xml
@@ -9,7 +9,7 @@
 		<version>0.8.0-SNAPSHOT</version>
 		<relativePath>../../releng/org.eclipse.incquery.parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.incquery.patternlanguage</artifactId>
+	<artifactId>org.eclipse.incquery.xcore</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	<build>
 		<plugins>
@@ -39,23 +39,16 @@
 								<exclude>.keep.txt</exclude>
 							</excludes>
 						</fileset>
-						<fileset>
-							<directory>../../tests/${project.artifactId}.tests/src-gen</directory>
-							<excludes>
-								<exclude>keep.txt</exclude>
-								<exclude>.keep.txt</exclude>
-							</excludes>
-						</fileset>
 					</filesets>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.fornax.toolsupport</groupId>
 				<artifactId>fornax-oaw-m2-plugin</artifactId>
-				<version>3.4.0</version>
+				<version>3.3.0</version>
 				<configuration>
 					<workflowEngine>mwe2</workflowEngine>
-					<workflowDescriptor>src/org/eclipse/incquery/patternlanguage/GeneratePatternLanguage.mwe2</workflowDescriptor>
+					<workflowDescriptor>src/org/eclipse/incquery/xcore/GenerateIncQueryXcore.mwe2</workflowDescriptor>
 				</configuration>
 				<executions>
 					<execution>
