--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -312,6 +312,44 @@
 			</build>
 		</profile>
 		<profile>
+			<id>xcore</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<property>
+					<name>xcore</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<modules>
+				<module>../../plugins/org.eclipse.incquery.xcore</module>
+				<module>../../plugins/org.eclipse.incquery.xcore.modeleditor</module>
+				<module>../../plugins/org.eclipse.incquery.xcore.ui</module>
+				<module>../../features/org.eclipse.incquery.xcore.feature</module>
+				<module>../../releng/org.eclipse.incquery.update.xcore</module>
+			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>target-platform-configuration</artifactId>
+						<version>${tycho.version}</version>
+						<configuration>
+							<resolver>p2</resolver>
+							<target>
+								<artifact>
+									<groupId>org.eclipse.incquery</groupId>
+									<artifactId>org.eclipse.incquery.target</artifactId>
+									<version>${project.version}</version>
+									<classifier>xtext25</classifier>
+								</artifact>
+							</target>
+							<ignoreTychoRepositories>true</ignoreTychoRepositories>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>examples</id>
 			<activation>
 				<file>
