[407970] Moved non-mwe generated Xcore EMF to a new project

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -321,6 +321,7 @@
 				</property>
 			</activation>
 			<modules>
+				<module>../../plugins/org.eclipse.incquery.xcore.model</module>
 				<module>../../plugins/org.eclipse.incquery.xcore</module>
 				<module>../../plugins/org.eclipse.incquery.xcore.modeleditor</module>
 				<module>../../plugins/org.eclipse.incquery.xcore.ui</module>
