--- a/bpm/org.eclipse.incquery.examples.bpm.incquery/build.properties
+++ b/bpm/org.eclipse.incquery.examples.bpm.incquery/build.properties
@@ -1,7 +1,6 @@
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               queries/
+               plugin.xml
 source.. = src/,\
            src-gen/
 output.. = bin/
