Simplified source feature generation configuration
Change-Id: Ia19ca07d62e03a5ce4d85f2575bf5afffa729cf3

--- a/features/org.eclipse.incquery.sdk.feature/pom.xml
+++ b/features/org.eclipse.incquery.sdk.feature/pom.xml
@@ -33,6 +33,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<labelSuffix></labelSuffix>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
