[429990] Introduced Observables on all levels of the tree viewer in the Query Explorer [429990] added missing files [429990] updated dependant testing plugin too
Change-Id: I0211b97059e4f0ac8e389788f5f72b3c7d1349e1
Signed-off-by: Tamas Szabo <tamas.szabo@itemis.de>

--- a/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.tooling.ui/plugin.xml
@@ -118,7 +118,7 @@
             <iterate
                   ifEmpty="false">
                <instanceof
-                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcherRoot">
+                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherRootContent">
                </instanceof>
             </iterate>
          </with>
@@ -133,7 +133,7 @@
             <iterate
                   ifEmpty="false">
                <instanceof
-                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatch">
+                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatchContent">
                </instanceof>
             </iterate>
          </with>
@@ -148,7 +148,7 @@
             <iterate
                   ifEmpty="false">
                <instanceof
-                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcher">
+                     value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherContent">
                </instanceof>
             </iterate>
          </with>
