[430134] Defined distribution management
Change-Id: I4c91ad6f0d3b3481bdec1bb09f7a5123a71ebdde

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -191,6 +191,19 @@
 			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
 		</pluginRepository>
 	</pluginRepositories>
+	<distributionManagement>
+		<repository>
+			<id>repo.eclipse.org</id>
+			<name>EMF-IncQuery Project Repository - Releases</name>
+			<url>https://repo.eclipse.org/content/repositories/emf-incquery-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>repo.eclipse.org</id>
+			<name>EMF-IncQuery Project Repository - Snapshots</name>
+			<url>https://repo.eclipse.org/content/repositories/emf-incquery-snapshots/</url>
+			<uniqueVersion>true</uniqueVersion>
+		</snapshotRepository>
+	</distributionManagement>
 	<scm>
 		<connection>${tycho.scmUrl}</connection>
 		<url>http://git.eclipse.org/c/incquery/org.eclipse.incquery.git/</url>
@@ -267,7 +280,7 @@
 			<activation>
 				<property>
 					<name>maven.runtime</name>
-				</property>				
+				</property>
 			</activation>
 			<modules>
 				<module>../../maven/patternlanguage</module>
