--- a/maven/patternlanguage/pom.xml
+++ b/maven/patternlanguage/pom.xml
@@ -38,6 +38,6 @@
 		<groupId>org.eclipse.incquery</groupId>
 		<artifactId>org.eclipse.incquery.parent</artifactId>
 		<version>0.8.0-SNAPSHOT</version>
-		<relativePath>../../org.eclipse.incquery.parent/pom.xml</relativePath>
+		<relativePath>../../releng/org.eclipse.incquery.parent/pom.xml</relativePath>
 	</parent>
 </project>
