[430134] Renamed the patternlanguage and runtime maven projects
Change-Id: I5983fdf8e6325abc2fc31592309549eee0c05a5d

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -283,8 +283,8 @@
 				</property>
 			</activation>
 			<modules>
-				<module>../../maven/patternlanguage</module>
-				<module>../../maven/runtime</module>
+				<module>../../maven/incquery-patternlanguage</module>
+				<module>../../maven/incquery-runtime</module>
 			</modules>
 		</profile>
 		<profile>
