--- a/maven/incquery-patternlanguage/pom.xml
+++ b/maven/incquery-patternlanguage/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>patternlanguage</artifactId>
+  <artifactId>incquery-patternlanguage</artifactId>
   <name>EMF-IncQuery Pattern Language Support</name>
   <description>Maven module for EMF-IncQuery Pattern Language Support</description>
 	<dependencies>
