--- a/maven/incquery-runtime/.project
+++ b/maven/incquery-runtime/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>runtime</name>
+	<name>incquery-runtime</name>
 	<comment></comment>
 	<projects>
 	</projects>
