[430134] Renamed the patternlanguage and runtime maven projects
Change-Id: Id2e0fc6ea9a0b085d69b4beb7d9b68c8c0a7ceef

--- a/maven/incquery-patternlanguage/pom.xml
+++ b/maven/incquery-patternlanguage/pom.xml
@@ -6,7 +6,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.incquery</groupId>
-			<artifactId>runtime</artifactId>
+			<artifactId>incquery-runtime</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
