--- a/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.tooling.ui/plugin.xml
@@ -74,10 +74,10 @@
                <iterate>
                   <or>
                      <instanceof
-                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcher">
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherContent">
                      </instanceof>
                      <instanceof
-                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcherRoot">
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherRootContent">
                      </instanceof>
                   </or>
                </iterate>
@@ -96,10 +96,10 @@
                <iterate>
                   <or>
                      <instanceof
-                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcher">
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherContent">
                      </instanceof>
                      <instanceof
-                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.ObservablePatternMatcherRoot">
+                           value="org.eclipse.incquery.tooling.ui.queryexplorer.content.matcher.PatternMatcherRootContent">
                      </instanceof>
                   </or>
                </iterate>
