[429858,398805]: "attach" feature for the Query Explorer  - move IModelConnector from runtime to ui (due to UI dependency)  - eliminate 398805 by removing workspace listeners  - introduce attach feature to replace save-reload cycles with something much faster  - remove unused buggy code from QE

--- a/plugins/org.eclipse.incquery.runtime.gmf/plugin.xml
+++ b/plugins/org.eclipse.incquery.runtime.gmf/plugin.xml
@@ -7,14 +7,14 @@
             adaptableType="org.eclipse.gmf.runtime.diagram.ui.resources.editor.parts.DiagramDocumentEditor"
             class="org.eclipse.incquery.runtime.gmf.ModelConnectorAdapterFactoryForGMFEditors">
          <adapter
-               type="org.eclipse.incquery.runtime.api.IModelConnector">
+               type="org.eclipse.incquery.tooling.ui.queryexplorer.IModelConnector">
          </adapter>
       </factory>
       <factory
             adaptableType="org.eclipse.gmf.runtime.diagram.ui.parts.IDiagramWorkbenchPart"
             class="org.eclipse.incquery.runtime.gmf.ModelConnectorAdapterFactoryForGMFEditors">
          <adapter
-               type="org.eclipse.incquery.runtime.api.IModelConnector">
+               type="org.eclipse.incquery.tooling.ui.queryexplorer.IModelConnector">
          </adapter>
       </factory>
    </extension>
