[428314] added recipes project to the build
Change-Id: Idfa6d948b63857457129e796a70984de45e3ad8d
Signed-off-by: Gabor Szarnyas <szarnyasg@gmail.com>

--- a/releng/org.eclipse.incquery.parent/pom.xml
+++ b/releng/org.eclipse.incquery.parent/pom.xml
@@ -19,6 +19,7 @@
 		<module>../../plugins/org.eclipse.incquery.runtime.base.itc</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.localsearch</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.rete</module>
+		<module>../../plugins/org.eclipse.incquery.runtime.rete.recipes</module>
 		<module>../../plugins/org.eclipse.incquery.runtime.evm</module>
 		<module>../../releng/org.eclipse.incquery.target</module>
 	</modules>
