--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/.settings/org.eclipse.emf.ecore.xcore.Xcore.prefs
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/.settings/org.eclipse.emf.ecore.xcore.Xcore.prefs
@@ -1,4 +1,4 @@
-autobuilding=true
+autobuilding=false
 eclipse.preferences.version=1
 is_project_specific=true
 outlet.DEFAULT_OUTPUT.cleanDirectory=false
