[428314] Added recipes to the feature and maven plug-ins
Change-Id: I62754a818d0ef34302b2b21754d9c9a6f9625ee8

--- a/maven/incquery-runtime/pom.xml
+++ b/maven/incquery-runtime/pom.xml
@@ -16,6 +16,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.incquery</groupId>
+			<artifactId>org.eclipse.incquery.runtime.rete.recipes</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.incquery</groupId>
 			<artifactId>org.eclipse.incquery.runtime.matchers</artifactId>
 			<version>${project.version}</version>
 		</dependency>
