[433574] Recipes cleanup: plugin/build.properties, obsolete EMF models  NEW - correct plugin.properties in recipes project  https://bugs.eclipse.org/bugs/show_bug.cgi?id=433574

--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/build.properties
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/build.properties
@@ -7,5 +7,6 @@ bin.includes = .,\
                plugin.properties
 jars.compile.order = .
 source.. = src-gen/,\
-           xtend-gen/
+           xtend-gen/,\
+           src/
 output.. = bin/
