--- a/plugins/org.eclipse.incquery.runtime.rete.recipes/plugin.properties
+++ b/plugins/org.eclipse.incquery.runtime.rete.recipes/plugin.properties
@@ -1,4 +1,4 @@
 #
 
-pluginName = Recipes Model
-providerName = www.example.org
+pluginName = EMF-IncQuery Recipe Model for Ready-to-construct Rete Net Description (Incubation)
+providerName = Budapest University of Technology and Economics, Fault Tolerant Systems Research Group
